[metadata]
name = signaling
author = Martin Domke
author-email = mail@martindomke.net
summary = Simple signal/slot implementation
description-file = README.rst
home-page = https://github.com/mdomke/signaling
classifier =
    Environment :: Console
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries


[files]
packages = signaling


[wheel]
universal = 1
